--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta name="apple-mobile-web-app-title" content="Ross">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Favicon -->
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   <title>Ross</title>
   <link rel="manifest" href="manifest.json">
@@ -50,7 +50,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=3715705610');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=2555869639');
       });
     }
   </script>
